# SynestiaOS

./: .board  .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  Jenkinsfile  Kconfig  Makefile  Makefile.common  Makefile.subdir  README.md  clang-tidy-diff.py  clang-tidy-run.py  docker-compose.yml  menuconfig.py  run-clang-format.sh  sources.list
Board/RaspberryPi3/: CMakeLists.txt  Makefile
Board/RaspberryPi3/include/: gpio.h  raspi3.h  synestia_os_hal.h  timer.h  uart.h
Board/RaspberryPi3/src/: synestia_os_hal.c  timer.c  uart.c
Kernel/: CMakeLists.txt  Makefile  README.md  kernel.S  linker.ld
Kernel/Arch/: CMakeLists.txt
Kernel/Arch/CortexA7/Boot/: boot.S
Kernel/Arch/arm/: boot.s  kernel.ld
Kernel/arch/arm/: boot.s  kernel.ld
Kernel/arch/arm64/: boot.s
Kernel/include/: common.h  gpio.h  interrupt.h  io.h  kheap.h  mm.h  raspi3.h  stdint.h  stdlib.h  uart.h  vmm.h
Kernel/src/: exception.s  init.c  interrupt.c  io.c  kheap.c  main.c  mm.c  stdlib.c  timer.c  uart.c
SourceCode/: CMakeLists.txt
SourceCode/Applications/: CMakeLists.txt
SourceCode/Applications/Console/: CMakeLists.txt
SourceCode/Applications/Console/include/: console.h
SourceCode/Applications/Console/src/: console.c  console.cc
SourceCode/Applications/HelloWorld/: CMakeLists.txt
SourceCode/Applications/HelloWorld/src/: helloworld.c
SourceCode/Applications/LvglDemo/: CMakeLists.txt
SourceCode/Applications/TestApp/: CMakeLists.txt  SynestiaELF.ld
SourceCode/Applications/TestApp/include/: testapp.h
SourceCode/Applications/TestApp/src/: testapp.c  testapp.cc
SourceCode/Arch/: CMakeLists.txt
SourceCode/Arch/arm/: .flags  CMakeLists.txt  kernel.ld
SourceCode/Arch/arm/include/: cpu.h  kernel_vmm.h  mmu.h  page.h  vmm.h
SourceCode/Arch/arm/src/: boot.S  call_trace.c  cpu.c  interrupt.c  kernel.ld  kernel_vmm.c  kernel_vmm.cc  page.c  page.cc  register.c  vmm.c  vmm.cc
SourceCode/Arch/arm64/: CMakeLists.txt
SourceCode/Arch/arm64/src/: boot.S  kernel.ld
SourceCode/Board/: CMakeLists.txt  README.md
SourceCode/Board/RaspberryPi/: CMakeLists.txt  README.md  config.txt
SourceCode/Board/RaspberryPi/include/: framebuffer.h  gpio.h  gpu.h  led.h  mailbox.h  proptag.h  raspi.h  raspi3.h  spi.h  synestia_os_hal.h  timer.h  uart.h
SourceCode/Board/RaspberryPi/src/: armtimer.c  aux.c  framebuffer.c  framebuffer.cc  gic400.c  gpu.c  gpu.cc  init.c  interrupt_controller.c  led.c  led.cc  mailbox.c  mailbox.cc  rpi-gpio.c  rpi-interrupts-controller.c  synestia_os_hal.c  synestia_os_hal.cc  timer.c  timer.cc  uart.c  uart.cc
SourceCode/Board/RaspberryPi3/: CMakeLists.txt
SourceCode/Board/RaspberryPi3/include/: framebuffer.h  gpio.h  gpu.h  mailbox.h  raspi3.h  synestia_os_hal.h  timer.h  uart.h
SourceCode/Board/RaspberryPi3/src/: framebuffer.c  gpu.c  mailbox.c  synestia_os_hal.c  timer.c  uart.c
SourceCode/Board/RaspberryPi4/: CMakeLists.txt
SourceCode/Board/RaspberryPi4/include/: framebuffer.h  gpio.h  gpu.h  mailbox.h  raspi4.h  timer.h  uart.h
SourceCode/Board/RaspberryPi4/src/: framebuffer.c  gpu.c  mailbox.c  timer.c  uart.c
SourceCode/Kernel/: CMakeLists.txt
SourceCode/Kernel/Arch/: CMakeLists.txt
SourceCode/Kernel/Arch/arm/: CMakeLists.txt  boot.S  boot.s  context_switch.s  kernel.ld
SourceCode/Kernel/Arch/arm64/: boot.S  boot.s  kernel.ld
SourceCode/Kernel/include/: atmoic.h  atomic.h  barrier.h  boot.h  ext2.h  file.h  init.h  interrupt.h  io.h  ipc.h  kheap.h  kobject.h  kqueue.h  kstack.h  ktimer.h  kvector.h  list.h  log.h  mutex.h  percpu.h  precpu.h  rbtree.h  sched.h  sempahore.h  semphore.h  slab.h  spinlock.h  sys_call.h  thread.h  type.h  vfs.h  vfs_dentry.h  vfs_inode.h  vfs_super_block.h  vmm.h
SourceCode/Kernel/include/capability/: capabality_node.h  capability.h
SourceCode/Kernel/include/debug/: heap_debug.h  slab_debug.h  timer_debug.h
SourceCode/Kernel/include/device_tree/: dtb.h
SourceCode/Kernel/include/kernel/: assert.h  atomic.h  atomic.hpp  bitmap.h  bus.h  channel.h  console.h  cpu.h  device.h  device_manager.h  ext2.h  ext2.hpp  interrupt.h  interrupt.hpp  io.h  io.hpp  kernel.h  kheap.h  kheap.hpp  kobject.h  kobject.hpp  kqueue.h  kqueue.hpp  kstack.h  kstack.hpp  ktimer.h  ktimer.hpp  kvector.h  kvector.hpp  list.h  list.hpp  log.h  log.hpp  module.h  mutex.h  mutex.hpp  percpu.h  (+27 more)
SourceCode/Kernel/src/: assert.c  atmoic.c  atomic.c  atomic.cc  barrier.c  bitmap.c  bus.c  channel.c  console.c  cpu.c  cpu_context_switch.s  exception.S  exception.s  ext2.c  ext2.cc  init.c  init.cc  interrupt.c  interrupt.cc  io.c  io.cc  ipc.c  ipc.cc  kernel.c  kheap.c  kheap.cc  kobject.c  kqueue.c  kqueue.cc  kstack.c  kstack.cc  ktimer.c  ktimer.cc  kvector.c  kvector.cc  list.c  list.cc  module.c  mutex.c  mutex.cc  (+30 more)
SourceCode/Libraries/: CMakeLists.txt  README.md
SourceCode/Libraries/LibBMP/: CMakeLists.txt
SourceCode/Libraries/LibC/: CMakeLists.txt
SourceCode/Libraries/LibCSS/: CMakeLists.txt
SourceCode/Libraries/LibElf/: CMakeLists.txt
SourceCode/Libraries/LibGUI/: CMakeLists.txt
SourceCode/Libraries/LibGfx/: CMakeLists.txt
SourceCode/Libraries/LibHTML/: CMakeLists.txt
SourceCode/Libraries/LibLvgl/: CMakeLists.txt
SourceCode/Libraries/LibMath/: CMakeLists.txt
SourceCode/Libraries/LibNet/: CMakeLists.txt
SourceCode/Libraries/LibSTL/: CMakeLists.txt
SourceCode/Libraries/LibShell/: CMakeLists.txt
SourceCode/Libraries/LibString/: CMakeLists.txt
SourceCode/Modules/: CMakeLists.txt  README.md
SourceCode/Modules/DesktopModule/: CMakeLists.txt
SourceCode/Modules/ELFLoadModule/: CMakeLists.txt
SourceCode/Modules/HelloWorldModule/: CMakeLists.txt
SourceCode/Systems/: CMakeLists.txt  README.md
SourceCode/Systems/xd/: CMakeLists.txt
SourceCode/Tests/: CMakeLists.txt  kernel_test_main.c
SourceCode/Tests/include/: atomic_test.h  kheap_test.h  klist_test.h  kstack_test.h  kvector_test.h  libmath_test.h  tests.h  tests_lib.h
SourceCode/Tests/src/: kheap_test.c  klist_test.c  kstack_test.c  test_lib.c  test_lib.cc  tests.c  tests.cc
(+316 files in other folders)
