if (SynestiaPlatform STREQUAL pi2)
	add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/RaspberryPi3)
elseif (SynestiaPlatform STREQUAL pi3)
	add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/RaspberryPi3)
elseif (SynestiaPlatform STREQUAL pi4)
	add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/RaspberryPi4)
else ()
    message(WARNING "unexpected PLATFORM ${PLATFORM}, not supported")
endif ()
