add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/LibC)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/LibElf)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/LibMath)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/LibGfx)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/LibBMP)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/LibGUI)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/LibString)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/LibHTML)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/LibCSS)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/LibNet)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/LibShell)
